cluster/apps/apps/authentik/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-oidc-authentik
  namespace: default
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: ingress
  to:
    - group: ""
      kind: Service
      name: authentik-server
